# railway-django-htmx-todo-app

./: .pre-commit-config.yaml  pyproject.toml
mysite/: settings.py  urls.py
templates/: base.html  todo.html
templates/partials/: todo.html
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
