[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
sqlparse = "^0.4.4"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
